Avoid breadcrumbs on root of site. Use volto-width-container--wide instead of govuk-width-container. Add more overlap on tiles. Remove padding in .volto-width-container--wide. Apply .volto-width-container--wide to all body blocks except .cc-masthead-wrapper. Use productName Climate Change in header.

--- a/volto/src/styles/custom.scss
+++ b/volto/src/styles/custom.scss
@@ -32,5 +32,8 @@
 
 .volto-width-container--wide {
   @include govuk-width-container(1920px);
-  padding: 16px;
+}
+
+main > * > * > :not(.cc-masthead-wrapper) {
+  @include govuk-width-container(1920px);
 }
